# GPU_ThermoHydraulique_Nucleaire

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  documentation_Simulation_Nucleaire_Eloi_KRESS.docx  documentation_Simulation_Nucleaire_Eloi_KRESS_v2(1).docx  documentation_Simulation_Nucleaire_Eloi_KRESS_v2.docx  documentation_Simulation_Nucleaire_Eloi_KRESS_v2_complete.docx  fix_submodules.sh  install_windows.ps1  main.c  orchestrateur.ps1  orchestrateur.sh  push_all.sh  setup_projet.sh
archive/: install_magnum.sh
archive/src/: main.cpp  viewer.h
archive/tests/: test_magnum  test_vulkan
archive/viewer_triangle/: README.md  check_magnum.sh
assemblage_solver/nuclear/code_c/: Affichage.c  (+21 more)
calcul3d/: build.sh  main.cpp  viewer_raylib
calcul3d/compute/: AccelStructure.hpp  NeutronCompute.hpp  ShadowCompute.hpp  ThermalCompute.hpp  VulkanCompute.hpp  VulkanContext.hpp
calcul3d/core/: AssemblageLoader.cpp  AssemblageLoader.hpp  GridData.hpp  ReactorParams.hpp
calcul3d/data/: Assemblage.txt  temperatures.csv
calcul3d/physics/: CoolantModel.hpp  NeutronCrossSection.hpp  NeutronFlux.hpp  NeutronModel.hpp  PrecursorData.hpp  ThermalModel.hpp  XenonModel.hpp
calcul3d/render/: Camera.hpp  ColorMap.hpp  CoolantPanel.hpp  CubeRenderer.hpp  CubeRenderer3D.hpp  DimsPanel.hpp  HUD.hpp  HeatmapPanel.hpp  MeshPanel.hpp  ModeratorRenderer.hpp  ReactorPanel.hpp  ShadowRenderer.hpp  SimPanel.hpp  XenonPanel.hpp
src/: CMakeCache.txt  viewer.cpp
tests/: test_magnum.cpp  test_vulkan.cpp  triangle  triangle.cpp
viewer3d/: Application.cpp  Application.hpp  CMakeLists.txt  build.sh  main.cpp  viewer.cpp  viewer.h  viewer3d
(+93 files in other folders)
